fixed up skills bug on mobile

--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -82,11 +82,11 @@
 		width: 11vw;
 	}
 
-	.logo-card {
+	.logo {
 		filter: grayscale(0%);
 	}
 
-	.logo-card:hover {
+	.logo:hover {
 		transform: none;
 	}
 }
